# buongiornissimo-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  coverage.yml
examples/: buongiornissimo.rs
src/: lib.rs  moveable_feasts.rs  providers.rs
src/providers/: augurando.rs  buongiornissimo_caffe.rs  buongiorno_immagini.rs  ilmondodigrazia.rs  mod.rs  ticondivido.rs
